apollo-router/src/plugins/telemetry/logging/snapshots/apollo_router__plugins__telemetry__logging__test__router_service@logs.snap
---
source: apollo-router/src/plugins/telemetry/logging/mod.rs
expression: yaml
---
- fields: {}
  level: INFO
  message: response
  span:
    apollo_private.request: true
    name: router
    otel.kind: SERVER
  spans:
    - apollo_private.request: true
      name: router
      otel.kind: SERVER
