apollo-router/src/plugins/telemetry/logging/snapshots/apollo_router__plugins__telemetry__logging__test__subgraph_service@logs.snap
---
source: apollo-router/src/plugins/telemetry/logging/mod.rs
expression: yaml
---
- fields: {}
  level: INFO
  message: response
  span:
    name: subgraph
    otel.kind: INTERNAL
  spans:
    - name: subgraph
      otel.kind: INTERNAL
