apollo-router/src/plugins/telemetry/logging/snapshots/apollo_router__plugins__telemetry__logging__test__supergraph_service@logs.snap
---
source: apollo-router/src/plugins/telemetry/logging/mod.rs
expression: yaml
---
- fields: {}
  level: INFO
  message: response
  span:
    apollo_private.field_level_instrumentation_ratio: 0.01
    apollo_private.graphql.variables: "{\"a\":\"\"}"
    name: supergraph
    otel.kind: INTERNAL
  spans:
    - apollo_private.field_level_instrumentation_ratio: 0.01
      apollo_private.graphql.variables: "{\"a\":\"\"}"
      name: supergraph
      otel.kind: INTERNAL
